TestSuite/errors/err0200.pas
uses System;

type TClass = class

[System.Runtime.InteropServices.DllImport('MyLib.dll')]
procedure Test;
end;

procedure TClass.Test;
begin
  
end;

begin
  
end.